2001-09-16  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (libnlsut_a_SOURCES): Remove safe-read.c.
	(libnlsut_a_HEADER, LIBADD_SOURCE, LIBADD_HEADER, UNUSED_SOURCE,
	UNUSED_HEADER): New variables.
	(noinst_HEADERS, EXTRA_DIST): Use them.

2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* pipe-bidi.c (nonintr_close): Add function prototypes.
	* pipe-in.c (nonintr_close, nonintr_open): Likewise.
	* pipe-out.c (nonintr_close, nonintr_open): Likewise.

2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* findprog.c: Include specification header before all other headers.
	* fstrcmp.c: Likewise.
	* full-write.c: Likewise.
	* hash.c: Likewise.
	* linebreak.c: Likewise.
	* mbswidth.c: Likewise.
	* progname.c: Likewise.
	* safe-read.c: Likewise.
	* wait-process.c: Likewise.
	* xerror.c: Likewise.
	* getline.c: Include getline.h.
	* mbswidth.h: Include <stddef.h>, for size_t.
	* wait-process.h: Include <unistd,h> and <sys/types.h>, for pid_t.

2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* javacomp.sh.in: New file.
	* javaexec.sh.in: New file.

2001-09-06  Bruno Haible  <haible@clisp.cons.org>

	* javacomp.h: New file.
	* javacomp.c: New file.
	* javaexec.h: New file.
	* javaexec.c: New file.
	* classpath.c: New file.
	* Makefile.am (EXTRA_DIST): Add classpath.c.
	(libnlsut_a_SOURCES): Add javacomp.c, javaexec.c.
	(noinst_HEADERS): Add javacomp.h, javaexec.h.

2001-09-06  Bruno Haible  <haible@clisp.cons.org>

	* sh-quote.h: New file.
	* sh-quote.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add sh-quote.c.
	(noinst_HEADERS): Add sh-quote.h.

2001-09-06  Bruno Haible  <haible@clisp.cons.org>

	* strpbrk.h: New file.
	* strpbrk.c: New file, from glibc-2.2.4.
	* Makefile.am (EXTRA_DIST): Add strpbrk.c.
	(noinst_HEADERS): Add strpbrk.h.

2001-09-06  Bruno Haible  <haible@clisp.cons.org>

	* setenv.h: New file.
	* setenv.c: New file, from glibc-2.2.4.
	* Makefile.am (EXTRA_DIST): Add setenv.c.
	(noinst_HEADERS): Add setenv.h.
