@@ -1,3 +1,7 @@
+2001-09-25  Bruno Haible  <haible@clisp.cons.org>
+
+	* javacomp.c (compile_java_class): Recognize javac exit code 2.
+
 2001-09-16  Bruno Haible  <haible@clisp.cons.org>
 
 	* Makefile.am (libnlsut_a_SOURCES): Remove safe-read.c.
